Added notebook for interactive analysis

--- a/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
+++ b/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9164484002f7bf83a53dee5352876ec691f4b73ff814bf362eec943f107a32b3"
+  "signature": "sha256:35913102083f747dc1df2dda4811d70f70a7ea8f410c62c04d4a724799292c18"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "metadata": {},
      "source": [
       "# A study of error potentials in P300 spelling\n",
-      "## Final project for the \"Exploring Neural Data\" course on [Coursera](www.coursera.org)"
+      "## Final project for the \"Exploring Neural Data\" course on [Coursera](http://www.coursera.org)"
      ]
     },
     {
