--- a/src/Interactive analysis.ipynb
+++ b/src/Interactive analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6417b688c467153c943287dcec793ed1edb7f4545eb96b9fd1be36ff37296345"
+  "signature": "sha256:ef0a5b0624ebda4fb5488c3696f735af025a43ab48a256c30e7ae8a61e49a8c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -45,15 +45,153 @@
      "input": [
       "TrainLabels = pd.read_csv('../data/TrainLabels.csv', header=0)\n",
       "\n",
-      "TrainLabels['Subject'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[1:3]))\n",
-      "TrainLabels['Session'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[8:10]))\n",
-      "TrainLabels['FeedbackNo'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[13:]))\n",
-      "TrainLabels = TrainLabels[['Subject','Session','FeedbackNo','Prediction']]"
+      "TrainLabels.head()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 47
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>IdFeedBack</th>\n",
+        "      <th>Prediction</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> S02_Sess01_FB001</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> S02_Sess01_FB002</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> S02_Sess01_FB003</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> S02_Sess01_FB004</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> S02_Sess01_FB005</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 2 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "         IdFeedBack  Prediction\n",
+        "0  S02_Sess01_FB001           1\n",
+        "1  S02_Sess01_FB002           1\n",
+        "2  S02_Sess01_FB003           0\n",
+        "3  S02_Sess01_FB004           0\n",
+        "4  S02_Sess01_FB005           1\n",
+        "\n",
+        "[5 rows x 2 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "TrainLabels['Subject'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[1:3]))\n",
+      "TrainLabels['Session'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[8:10]))\n",
+      "TrainLabels['FeedbackNo'] = TrainLabels['IdFeedBack'].map(lambda s : int(s[13:]))\n",
+      "TrainLabels = TrainLabels[['Subject','Session','FeedbackNo','Prediction']]\n",
+      "TrainLabels.head()\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Subject</th>\n",
+        "      <th>Session</th>\n",
+        "      <th>FeedbackNo</th>\n",
+        "      <th>Prediction</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 3</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 5</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 4 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "   Subject  Session  FeedbackNo  Prediction\n",
+        "0        2        1           1           1\n",
+        "1        2        1           2           1\n",
+        "2        2        1           3           0\n",
+        "3        2        1           4           0\n",
+        "4        2        1           5           1\n",
+        "\n",
+        "[5 rows x 4 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -68,7 +206,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 55,
+       "prompt_number": 4,
        "text": [
         "1    3850\n",
         "0    1590\n",
@@ -76,15 +214,376 @@
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\n",
+      "pd.value_counts(TrainLabels['Subject'])"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "23    340\n",
+        "11    340\n",
+        "7     340\n",
+        "26    340\n",
+        "22    340\n",
+        "18    340\n",
+        "14    340\n",
+        "6     340\n",
+        "2     340\n",
+        "21    340\n",
+        "17    340\n",
+        "13    340\n",
+        "24    340\n",
+        "20    340\n",
+        "16    340\n",
+        "12    340\n",
+        "dtype: int64"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ErrorFeedbacks = TrainLabels[TrainLabels['Prediction'] == 0]\n",
+      "ErrorFeedbacks = ErrorFeedbacks[['Subject','Session','FeedbackNo']]\n",
+      "pd.value_counts(ErrorFeedbacks['Subject'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "13    162\n",
+        "26    159\n",
+        "12    151\n",
+        "16    129\n",
+        "14    125\n",
+        "2     120\n",
+        "23    119\n",
+        "11    115\n",
+        "17    114\n",
+        "20    104\n",
+        "24    101\n",
+        "18     79\n",
+        "7      33\n",
+        "21     28\n",
+        "22     27\n",
+        "6      24\n",
+        "dtype: int64"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ErrorFeedbacks.head()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Subject</th>\n",
+        "      <th>Session</th>\n",
+        "      <th>FeedbackNo</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>2 </th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  3</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3 </th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  4</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5 </th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  6</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>8 </th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  9</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>12</th>\n",
+        "      <td> 2</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 13</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 3 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "    Subject  Session  FeedbackNo\n",
+        "2         2        1           3\n",
+        "3         2        1           4\n",
+        "5         2        1           6\n",
+        "8         2        1           9\n",
+        "12        2        1          13\n",
+        "\n",
+        "[5 rows x 3 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "error_crosstab = pd.crosstab(ErrorFeedbacks['Session'], ErrorFeedbacks['Subject'], margins=True)\n",
+      "error_crosstab = error_crosstab.drop('All', 1)\n",
+      "error_crosstab"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th>Subject</th>\n",
+        "      <th>2</th>\n",
+        "      <th>6</th>\n",
+        "      <th>7</th>\n",
+        "      <th>11</th>\n",
+        "      <th>12</th>\n",
+        "      <th>13</th>\n",
+        "      <th>14</th>\n",
+        "      <th>16</th>\n",
+        "      <th>17</th>\n",
+        "      <th>18</th>\n",
+        "      <th>20</th>\n",
+        "      <th>21</th>\n",
+        "      <th>22</th>\n",
+        "      <th>23</th>\n",
+        "      <th>24</th>\n",
+        "      <th>26</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Session</th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td>  10</td>\n",
+        "      <td>  1</td>\n",
+        "      <td>  4</td>\n",
+        "      <td>  14</td>\n",
+        "      <td>  19</td>\n",
+        "      <td>  22</td>\n",
+        "      <td>  23</td>\n",
+        "      <td>  16</td>\n",
+        "      <td>   6</td>\n",
+        "      <td>  9</td>\n",
+        "      <td>  17</td>\n",
+        "      <td>  2</td>\n",
+        "      <td>  3</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>   6</td>\n",
+        "      <td>  25</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td>  17</td>\n",
+        "      <td>  3</td>\n",
+        "      <td>  7</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>  19</td>\n",
+        "      <td>  30</td>\n",
+        "      <td>  16</td>\n",
+        "      <td>  19</td>\n",
+        "      <td>  17</td>\n",
+        "      <td> 14</td>\n",
+        "      <td>  14</td>\n",
+        "      <td>  2</td>\n",
+        "      <td>  4</td>\n",
+        "      <td>  24</td>\n",
+        "      <td>   9</td>\n",
+        "      <td>  23</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td>  24</td>\n",
+        "      <td>  5</td>\n",
+        "      <td>  3</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>  27</td>\n",
+        "      <td>  35</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>  22</td>\n",
+        "      <td>  24</td>\n",
+        "      <td> 14</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>  4</td>\n",
+        "      <td>  6</td>\n",
+        "      <td>  21</td>\n",
+        "      <td>  14</td>\n",
+        "      <td>  30</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td>  25</td>\n",
+        "      <td>  4</td>\n",
+        "      <td>  7</td>\n",
+        "      <td>  21</td>\n",
+        "      <td>  27</td>\n",
+        "      <td>  25</td>\n",
+        "      <td>  18</td>\n",
+        "      <td>  25</td>\n",
+        "      <td>  26</td>\n",
+        "      <td> 15</td>\n",
+        "      <td>  19</td>\n",
+        "      <td>  5</td>\n",
+        "      <td>  5</td>\n",
+        "      <td>  17</td>\n",
+        "      <td>  23</td>\n",
+        "      <td>  21</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5</th>\n",
+        "      <td>  44</td>\n",
+        "      <td> 11</td>\n",
+        "      <td> 12</td>\n",
+        "      <td>  44</td>\n",
+        "      <td>  59</td>\n",
+        "      <td>  50</td>\n",
+        "      <td>  50</td>\n",
+        "      <td>  47</td>\n",
+        "      <td>  41</td>\n",
+        "      <td> 27</td>\n",
+        "      <td>  36</td>\n",
+        "      <td> 15</td>\n",
+        "      <td>  9</td>\n",
+        "      <td>  39</td>\n",
+        "      <td>  49</td>\n",
+        "      <td>  60</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>All</th>\n",
+        "      <td> 120</td>\n",
+        "      <td> 24</td>\n",
+        "      <td> 33</td>\n",
+        "      <td> 115</td>\n",
+        "      <td> 151</td>\n",
+        "      <td> 162</td>\n",
+        "      <td> 125</td>\n",
+        "      <td> 129</td>\n",
+        "      <td> 114</td>\n",
+        "      <td> 79</td>\n",
+        "      <td> 104</td>\n",
+        "      <td> 28</td>\n",
+        "      <td> 27</td>\n",
+        "      <td> 119</td>\n",
+        "      <td> 101</td>\n",
+        "      <td> 159</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>6 rows \u00d7 16 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 44,
+       "text": [
+        "Subject   2   6   7    11   12   13   14   16   17  18   20  21  22   23   24  \\\n",
+        "Session                                                                         \n",
+        "1         10   1   4   14   19   22   23   16    6   9   17   2   3   18    6   \n",
+        "2         17   3   7   18   19   30   16   19   17  14   14   2   4   24    9   \n",
+        "3         24   5   3   18   27   35   18   22   24  14   18   4   6   21   14   \n",
+        "4         25   4   7   21   27   25   18   25   26  15   19   5   5   17   23   \n",
+        "5         44  11  12   44   59   50   50   47   41  27   36  15   9   39   49   \n",
+        "All      120  24  33  115  151  162  125  129  114  79  104  28  27  119  101   \n",
+        "\n",
+        "Subject   26  \n",
+        "Session       \n",
+        "1         25  \n",
+        "2         23  \n",
+        "3         30  \n",
+        "4         21  \n",
+        "5         60  \n",
+        "All      159  \n",
+        "\n",
+        "[6 rows x 16 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def compute_trial_idx(session, feedbackno):\n",
+      "    if session == 5:\n",
+      "        trial_idx = 4 * 60 + feedbackno\n",
+      "    else:\n",
+      "        trial_idx = (session - 1) * 60 + feedbackno\n",
+      "    \n",
+      "    return trial_idx"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 45
     }
    ],
    "metadata": {}
