--- a/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
+++ b/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:faca7e0d9a65188f324d839d6d2e474a4f0a1d2aa64947a1f936af0e92d5b41e"
+  "signature": "sha256:83e0717bd084a6992e19c1a3320acb82ecbbb599b89944594c3b41f775c651c6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,55 +29,130 @@
      "source": [
       "### Dataset description\n",
       "\n",
-      "_What data were you looking at?_\n",
+      "For this project we decided to analyze the [BCI Challenge @ NER 2015](http://www.kaggle.com/c/inria-bci-challenge) dataset available on [Kaggle](http://www.kaggle.com). This dataset includes EEG recordings from 16 subjects (7 men, mean age = 28.2 $\\pm$ 5.1 (SD), range 20-37) performing a [P300 spelling task](http://www.bci2000.org/wiki/index.php/User_Tutorial:Introduction_to_the_P300_Response). \n",
       "\n",
-      "- We looked at the [BCI Challenge @NER 2015](http://www.kaggle.com/c/inria-bci-challenge) data from [Kaggle](http://www.kaggle.com)\n",
-      "- The dataset contains EEG recordings from 16 subjects (7 men, mean age = 28.2 $\\pm$ 5.1 (SD), range 20-37)\n",
-      "- data was recorded with 56 passive Ag/AgCl EEG sensors positioned according to the 10/20 system\n",
-      "- signals were originally sampled at 600 Hz, but the present dataset was downsampled to 200 Hz\n",
-      "- besides EEG, eye activity was also recorded with an EOG channel\n",
-      "- from the 16 available subjects, we selected the 10 subjects which had the most incorrect feedbacks (i.e. error potentials)\n",
+      "In the P300 spelling task the subject is presented with a matrix of $6 \\times 6$ characters on the screen. The cells of the matrix are flashed and the subject focuses on the target character. Flashing of the cell the subject is attending to elicits a wave in EEG called the P300 event-related potential (ERP). Using machine learning techniques it's possible to detect this wave, thus detecting the character subject wants to spell. Therefore, P300 spelling is one of paradigms of brain-computer interfacing (BCI). \n",
       "\n",
-      "- subjects were performing spelling with a P300 BCI\n",
-      "- they did 5 spelling sessions: first 4 had 60 feedback presentation, and the last one had 100 feedback presentations\n",
-      "- the data of interest for us was the data related to feedbacks which were wrong, and should therefore contain an error potential (ErrP)\n",
+      "Unfortunately, a BCI cannot typically detect the P300 wave with perfect accuracy. One way to remedy this is to provide feedback to subject (which character was detected) and measure the EEG response to feedback. The correct and incorrect feedback elicit different responses - the latter evokes an Error-Related Potential (ErrP). This response has two distinct components - error-related negativity (ERN or Neg-ErrP) and error-related positivity (Pe or Pos-ErrP).\n",
+      "\n",
+      "Detecting ErrPs can help the accuracy of the P300 speller - when an error is detected, the character can be automatically substituted with the second best guess, or the subject can try to select it again.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "In the dataset we analyzed the subjects spelled 60 characters in each of 4 sessions, and 100 characters in the last 5th session. After the selection of a character feedback was provided. Since the target characters were predetermined, each feedback can be labeled as correct or incorrect. In total there was 5440 feedbacks - 340 per subject. Bellow we provide a random excerpt from the table describing each feedback trial (where \"Prediction\" is 1, the feedback was correct).\n",
+      "\n",
+      "| Index | Subject | Session | FeedbackNo | Prediction |\n",
+      "|-------|---------|---------|------------|------------|\n",
+      "| 1968  | 13      | 5       | 29         | 0          |\n",
+      "| 1297  | 11      | 5       | 38         | 0          |\n",
+      "| 822   | 7       | 3       | 23         | 1          |\n",
+      "| 768   | 7       | 2       | 29         | 1          |\n",
+      "| 2867  | 17      | 3       | 28         | 0          |\n",
+      "\n",
+      "\n",
+      "During the task EEG was recorded with 56 passive Ag/AgCl sensors positioned according to the [10/20 system](http://en.wikipedia.org/wiki/10-20_system_%28EEG%29). Signals were originally sampled at 600 Hz, but the available dataset was downsampled to 200 Hz. Besides EEG, eye activity was also recorded with an EOG channel. Below we show a part of the recording, ommiting all the channels except Cz and EOG. Note: FeedbackEvent marks when the feedback was presented to the subject (the value changes to 1 at the moment of presentation).\n",
+      "\n",
+      "|   | Time  | Cz         | EOG          | FeedbackEvent |\n",
+      "|---|-------|------------|--------------|---------------|\n",
+      "| 0 | 0.000 | 311.298295 | -906.668876  | 0             |\n",
+      "| 1 | 0.005 | 551.888548 | -1484.107119 | 0             |\n",
+      "| 2 | 0.010 | 478.480250 | -1313.435186 | 0             |\n",
+      "| 3 | 0.015 | 502.729161 | -1391.966973 | 0             |\n",
+      "| 4 | 0.020 | 479.678270 | -1347.494166 | 0             |\n",
+      "\n",
+      "Further details about the experiment can be found in the paper of Perrin et al., 2012.\n",
+      "\n",
+      "\n",
       "\n",
       "### Hypotheses\n",
       "\n",
-      "_What questions you were trying to answer?_\n",
+      "\n",
+      "Ideally, we could just put an EEG headset on and use a BCI like the described P300 speller. But for now BCIs are not able to do this - they need to be calibrated to a particular user.  A common problem with BCIs is that once they are calibrated and put into operation, their performance degrades over time and they need to be recalibrated. This is inconvenient and reduces the usefulness of BCIs.\n",
+      "\n",
+      "One assumed source of performance degradation is the nonstationary nature of EEG. The properties of the recorded signals change over time due to a number of factors: artifacts (sweating, muscle tension), changes in skin-electrode contact, fatigue, changes in attention, etc. We were curious if we could find this kind of temporal nonstationarity in the amplitudes of error potentials over a course of an experiment. Finding such nonstationarity would indicate the need of adapting a BCI even within a single experiment.\n",
+      "\n",
+      "Our **hypothesis** was therefore: the amplitudes of the error-related negativity (Neg-ErrP) and positivity (Pos-ErrP) are going to diminish over the course of an experiment.\n",
       "\n",
       "- we hypothesize that due to the attentional processes and fatigue, the amplitudes of the ErrP peaks are going to decrease over time (sessions)\n",
       "- we are interested in the error related negativity (Neg-ErrP) and error related positivity (Pos-ErrP)\n",
       "- based on findings from Perrin et al., we use channel Cz as the channel of interest, and we use windows [325,375] ms (Neg-ErrP) and [455, 505] ms (Pos-ErrP)\n",
       "- additionally, we are interested on how the results vary over subjects\n",
       "\n",
+      "### Methods\n",
+      "\n",
+      "In our analysis we focused on a single channel - Cz, which is located on the top of the head. This channel was previously found to exhibit good discrimination between correct and incorrect feedbacks (Perrin et al., 2012).\n",
+      "\n",
+      "In order to reduce various sources of noise (electrical and biological - e.g. power line noise, muscle noise, skin potentials, ...) we first filtered the signal. We used a digital bandpass IIR Butterworth filter of the 4th order. The half-power (or -3dB) cutoff points were 0.1 Hz and 30 Hz.\n",
+      "![Alt text](tree/files/frequency_response.png \"Optional title\")\n",
+      "\n",
+      "To test the operation of the filter we generated a signal mimicking an ErrP (a period of a sinusoid). We added white gaussian noise to this signal and an additional 50 Hz sinusoid mimicking the power line noise. All the applications of the filter were zero-phase.\n",
+      "\n",
+      "\n",
+      "![Alt text](tree/files/test_signal.png \"Optional title\")\n",
+      "![Alt text](tree/files/noisy_signal.png \"Optional title\")\n",
+      "![Alt text](tree/files/filter_effect.png \"Optional title\")\n",
+      "\n",
+      "**Trick**: instead of using scipy.signal.lfilter() function to filter, we used scipy.signal.filtfilt(). This function filters the signal twice, once from the left side, and once from the right. This removes the delay that filter would usually introduce into the signal.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "After filtering there are still many artifacts related to eye movements (blinks and eye movements) in the channel of interest.\n",
+      "\n",
+      "![Alt text](tree/files/eye_artifacts.png \"Optional title\")\n",
+      "\n",
+      "To remove artifacts linear regression can be used. We assumed the following linear model:\n",
+      "\n",
+      "$\\mathrm{Cz} = \\beta \\times \\mathrm{EOG} + \\mathrm{neural~activity}$.\n",
+      "\n",
+      "Then activity of interest can be obtained with:\n",
+      "\n",
+      "$\\mathrm{neural~activity} = \\mathrm{Cz} - \\hat{\\beta} \\times \\mathrm{EOG} + $,\n",
+      "\n",
+      "where $\\hat{\\beta}$ is the estimated regression coefficient.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "After cleaning the data, it's necessary to split it into trials. We took 200 ms before each feedback event and 800 ms after it, giving us 1 second trials or epochs. The baseline period (before the feedback) needs to be zero mean to facilitate averaging over trials. To achieve this we subtracted the mean value of the baseline period from the whole trial (individually for each trial). \n",
+      "\n",
+      "\n",
+      "\n",
       "### Results\n",
+      "\n",
+      "Before presenting the results, we show the sample sizes for each subject and session. We were only interested in the incorrect feedbacks which presumably elicit ErrPs, thus we show the number of incorrect trials.\n",
+      "\n",
+      "| Subject | 2   | 6  | 7  | 11  | 12  | 13  | 14  | 16  | 17  | 18 | 20  | 21 | 22 | 23  | 24  | 26  | All  |\n",
+      "|---------|-----|----|----|-----|-----|-----|-----|-----|-----|----|-----|----|----|-----|-----|-----|------|\n",
+      "| Session |     |    |    |     |     |     |     |     |     |    |     |    |    |     |     |     |      |\n",
+      "| 1       | 10  | 1  | 4  | 14  | 19  | 22  | 23  | 16  | 6   | 9  | 17  | 2  | 3  | 18  | 6   | 25  | 195  |\n",
+      "| 2       | 17  | 3  | 7  | 18  | 19  | 30  | 16  | 19  | 17  | 14 | 14  | 2  | 4  | 24  | 9   | 23  | 236  |\n",
+      "| 3       | 24  | 5  | 3  | 18  | 27  | 35  | 18  | 22  | 24  | 14 | 18  | 4  | 6  | 21  | 14  | 30  | 283  |\n",
+      "| 4       | 25  | 4  | 7  | 21  | 27  | 25  | 18  | 25  | 26  | 15 | 19  | 5  | 5  | 17  | 23  | 21  | 283  |\n",
+      "| 5       | 44  | 11 | 12 | 44  | 59  | 50  | 50  | 47  | 41  | 27 | 36  | 15 | 9  | 39  | 49  | 60  | 593  |\n",
+      "| All     | 120 | 24 | 33 | 115 | 151 | 162 | 125 | 129 | 114 | 79 | 104 | 28 | 27 | 119 | 101 | 159 | 1590 |\n",
+      "\n",
+      "#### ERP averages\n",
+      "\n",
+      "![Alt text](tree/files/filter_effect.png \"Optional title\")\n",
+      "\n",
+      "####\u00a0Effect of time on ErrP amplitudes\n",
       "\n",
       "_Show what you've found. Put figures here._\n",
       "\n",
-      "- grand average over all the subjects and sessions, in Cz, with windows of interest shaded\n",
-      " - FIR zero phase filtering (decide on exact filter)\n",
-      " - consider regressing out EOG (show grand average) \n",
-      "- ~~pivot table with axes Subject and Session, with number of errors~~\n",
+      "\n",
       "- figure with regression between trial number and Neg-ErrP and Pos-ErrP\n",
       "\n",
       "### Misc.\n",
       "\n",
-      "- _Describe one programming trick_\n",
+      "- ~~_Describe one programming trick_~~\n",
       "\n",
       "\n",
       "- _Describe a problem you encountered_\n",
       "\n",
-      "\n",
       "- _What would you do next with your findings?_\n",
       "\n",
-      "- we are going to use our findings in competing in the challenge"
+      "- we are going to use our findings in competing in the challenge\n",
+      "\n"
      ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": []
     }
    ],
    "metadata": {}
