Added all the figures and some text.

--- a/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
+++ b/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:83e0717bd084a6992e19c1a3320acb82ecbbb599b89944594c3b41f775c651c6"
+  "signature": "sha256:44a6b1e729b632781cb6fafad45e2fbc6dd05bb41b0ae1df618c632079d38e3c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,52 +73,58 @@
       "\n",
       "Our **hypothesis** was therefore: the amplitudes of the error-related negativity (Neg-ErrP) and positivity (Pos-ErrP) are going to diminish over the course of an experiment.\n",
       "\n",
-      "- we hypothesize that due to the attentional processes and fatigue, the amplitudes of the ErrP peaks are going to decrease over time (sessions)\n",
-      "- we are interested in the error related negativity (Neg-ErrP) and error related positivity (Pos-ErrP)\n",
       "- based on findings from Perrin et al., we use channel Cz as the channel of interest, and we use windows [325,375] ms (Neg-ErrP) and [455, 505] ms (Pos-ErrP)\n",
-      "- additionally, we are interested on how the results vary over subjects\n",
       "\n",
       "### Methods\n",
       "\n",
       "In our analysis we focused on a single channel - Cz, which is located on the top of the head. This channel was previously found to exhibit good discrimination between correct and incorrect feedbacks (Perrin et al., 2012).\n",
       "\n",
       "In order to reduce various sources of noise (electrical and biological - e.g. power line noise, muscle noise, skin potentials, ...) we first filtered the signal. We used a digital bandpass IIR Butterworth filter of the 4th order. The half-power (or -3dB) cutoff points were 0.1 Hz and 30 Hz.\n",
-      "![Alt text](tree/files/frequency_response.png \"Optional title\")\n",
+      "![Alt text](files/frequency_response.png)\n",
       "\n",
       "To test the operation of the filter we generated a signal mimicking an ErrP (a period of a sinusoid). We added white gaussian noise to this signal and an additional 50 Hz sinusoid mimicking the power line noise. All the applications of the filter were zero-phase.\n",
       "\n",
+      "First we show the clean test signal:\n",
+      "![Alt text](files/test_signal.png)\n",
       "\n",
-      "![Alt text](tree/files/test_signal.png \"Optional title\")\n",
-      "![Alt text](tree/files/noisy_signal.png \"Optional title\")\n",
-      "![Alt text](tree/files/filter_effect.png \"Optional title\")\n",
+      "Next figure shows the test signal corrupted by noise and the signal after filtering:\n",
+      "![Alt text](files/noisy_signal.png)\n",
       "\n",
-      "**Trick**: instead of using scipy.signal.lfilter() function to filter, we used scipy.signal.filtfilt(). This function filters the signal twice, once from the left side, and once from the right. This removes the delay that filter would usually introduce into the signal.\n",
+      "The difference between the original signal, and the signal corrupted by noise and then filtered is seen on the next figure:\n",
+      "![Alt text](files/filter_effect.png)\n",
+      "\n",
+      ">**Trick**: instead of using scipy.signal.lfilter() function to filter, we used scipy.signal.filtfilt(). This function filters the signal twice, once from the left side, and once from the right. This removes the delay that filter would usually introduce into the signal.\n",
       "\n",
       "---\n",
       "\n",
-      "After filtering there are still many artifacts related to eye movements (blinks and eye movements) in the channel of interest.\n",
+      "After filtering there are still many artifacts related to eye movements (blinks and eye movements) in the channel of interest. We can see this clearly in the following figure which shows an eye blink appearing both in the EOG and Cz channel:\n",
       "\n",
-      "![Alt text](tree/files/eye_artifacts.png \"Optional title\")\n",
+      "![Alt text](files/eye_artifacts.png)\n",
       "\n",
-      "To remove artifacts linear regression can be used. We assumed the following linear model:\n",
+      "To remove these artifacts linear regression can be used. We assumed the following linear model:\n",
       "\n",
       "$\\mathrm{Cz} = \\beta \\times \\mathrm{EOG} + \\mathrm{neural~activity}$.\n",
       "\n",
       "Then activity of interest can be obtained with:\n",
       "\n",
-      "$\\mathrm{neural~activity} = \\mathrm{Cz} - \\hat{\\beta} \\times \\mathrm{EOG} + $,\n",
+      "$\\mathrm{neural~activity} = \\mathrm{Cz} - \\hat{\\beta} \\times \\mathrm{EOG}$,\n",
       "\n",
-      "where $\\hat{\\beta}$ is the estimated regression coefficient.\n",
+      "where $\\hat{\\beta}$ is the estimated regression coefficient. To estimate the regression coefficient we used the \"statsmodels\" package.\n",
       "\n",
       "---\n",
       "\n",
       "After cleaning the data, it's necessary to split it into trials. We took 200 ms before each feedback event and 800 ms after it, giving us 1 second trials or epochs. The baseline period (before the feedback) needs to be zero mean to facilitate averaging over trials. To achieve this we subtracted the mean value of the baseline period from the whole trial (individually for each trial). \n",
       "\n",
+      "---\n",
+      "#### Technical note\n",
+      "\n",
+      "A **technical problem** we faced was efficient and convenient data representation and manipulation. The description of each trial was stored as a row in a Pandas dataframe. We wanted to add the EEG data organized in a 2D NumPy array as an additional cell in the row. This turned out to be an inconvenient solution. Once stored in the dataframe, the NumPy array is converted into a string representation. We found no function to easily convert back from the string representation into an array. Thus, we separated the EEG data into a separate dictionary, where the keys corresponded to the row numbers of the table, and the values were NumPy arrays. In this way we could link between a trial description in the dataframe and the recorded data in the dictionary. To save the results, we used CSV files for the dataframe and binary files for the EEG data via the Python \"pickle\" module. This change also significantly sped up the execution of the code.\n",
+      "\n",
       "\n",
       "\n",
       "### Results\n",
       "\n",
-      "Before presenting the results, we show the sample sizes for each subject and session. We were only interested in the incorrect feedbacks which presumably elicit ErrPs, thus we show the number of incorrect trials.\n",
+      "Before presenting the results, we show the sample sizes for each subject and session. We were more interested in the incorrect feedbacks which presumably elicit ErrPs, thus we show the number of incorrect trials.\n",
       "\n",
       "| Subject | 2   | 6  | 7  | 11  | 12  | 13  | 14  | 16  | 17  | 18 | 20  | 21 | 22 | 23  | 24  | 26  | All  |\n",
       "|---------|-----|----|----|-----|-----|-----|-----|-----|-----|----|-----|----|----|-----|-----|-----|------|\n",
@@ -132,25 +138,21 @@
       "\n",
       "#### ERP averages\n",
       "\n",
-      "![Alt text](tree/files/filter_effect.png \"Optional title\")\n",
+      "![Alt text](files/grand_average.png)\n",
       "\n",
       "####\u00a0Effect of time on ErrP amplitudes\n",
       "\n",
-      "_Show what you've found. Put figures here._\n",
+      "![Blabla](files/neg_errp_regression.png)\n",
+      "\n",
+      "![Alt text](files/pos_errp_regression.png)\n",
       "\n",
       "\n",
-      "- figure with regression between trial number and Neg-ErrP and Pos-ErrP\n",
       "\n",
-      "### Misc.\n",
+      "### Future work\n",
       "\n",
-      "- ~~_Describe one programming trick_~~\n",
+      "The obtained results showed no correlations between the time and the amplitude of error potentials. We consider that further investigation on a larger spatial space could indicate more reliable relation between the two characteristics of the potentials. More specifically, by analyzing only one channel could have had a limitative effect over our findings. Furthermore, we believe that a longer recording session would be more appropriate for the assessment of this time-amplitude correlation.\n",
       "\n",
-      "\n",
-      "- _Describe a problem you encountered_\n",
-      "\n",
-      "- _What would you do next with your findings?_\n",
-      "\n",
-      "- we are going to use our findings in competing in the challenge\n",
+      "### References\n",
       "\n"
      ]
     }
