--- a/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
+++ b/doc/Exploring Neural Data - A study of error potentials in P300 spelling.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:44a6b1e729b632781cb6fafad45e2fbc6dd05bb41b0ae1df618c632079d38e3c"
+  "signature": "sha256:bc2726e471439deb3f46dcb2feff0fb201b6e8d8670eaffcc6c182a5a0917c8c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,14 +13,14 @@
      "metadata": {},
      "source": [
       "# A study of error potentials in P300 spelling\n",
-      "## Final project for the \"Exploring Neural Data\" course on [Coursera](http://www.coursera.org)"
+      "## Final project for the \"[Exploring Neural Data](http://class.coursera.org/neuraldata-001)\" course on [Coursera](http://www.coursera.org)"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Authors: Andreea Sburlea and Filip Melinscak"
+      "#### Authors: Andreea Sburlea and Filip Melinscak"
      ]
     },
     {
@@ -31,7 +31,7 @@
       "\n",
       "For this project we decided to analyze the [BCI Challenge @ NER 2015](http://www.kaggle.com/c/inria-bci-challenge) dataset available on [Kaggle](http://www.kaggle.com). This dataset includes EEG recordings from 16 subjects (7 men, mean age = 28.2 $\\pm$ 5.1 (SD), range 20-37) performing a [P300 spelling task](http://www.bci2000.org/wiki/index.php/User_Tutorial:Introduction_to_the_P300_Response). \n",
       "\n",
-      "In the P300 spelling task the subject is presented with a matrix of $6 \\times 6$ characters on the screen. The cells of the matrix are flashed and the subject focuses on the target character. Flashing of the cell the subject is attending to elicits a wave in EEG called the P300 event-related potential (ERP). Using machine learning techniques it's possible to detect this wave, thus detecting the character subject wants to spell. Therefore, P300 spelling is one of paradigms of brain-computer interfacing (BCI). \n",
+      "In the P300 spelling task the subject is presented with a matrix of $6 \\times 6$ characters on the screen. The cells of the matrix are flashed and the subject focuses on the target character. Flashing of the cell, while the subject is attending to it, elicits a wave in EEG called the P300 event-related potential (ERP). Using machine learning techniques it's possible to detect this wave, thus detecting the character subject wants to spell. Therefore, P300 spelling is one of brain-computer interfacing (BCI) paradigms. \n",
       "\n",
       "Unfortunately, a BCI cannot typically detect the P300 wave with perfect accuracy. One way to remedy this is to provide feedback to subject (which character was detected) and measure the EEG response to feedback. The correct and incorrect feedback elicit different responses - the latter evokes an Error-Related Potential (ErrP). This response has two distinct components - error-related negativity (ERN or Neg-ErrP) and error-related positivity (Pe or Pos-ErrP).\n",
       "\n",
@@ -39,7 +39,7 @@
       "\n",
       "---\n",
       "\n",
-      "In the dataset we analyzed the subjects spelled 60 characters in each of 4 sessions, and 100 characters in the last 5th session. After the selection of a character feedback was provided. Since the target characters were predetermined, each feedback can be labeled as correct or incorrect. In total there was 5440 feedbacks - 340 per subject. Bellow we provide a random excerpt from the table describing each feedback trial (where \"Prediction\" is 1, the feedback was correct).\n",
+      "In the dataset we analyzed the subjects spelled 60 characters in each of the four sessions, and 100 characters in the last fifth session. After the selection of a character feedback was provided. Since the target characters were predetermined, each feedback can be labeled as correct or incorrect. In total there were 5440 feedbacks - 340 per subject. Below we provide a random excerpt from the table describing each feedback trial (where \"Prediction\" is 1, the feedback was correct).\n",
       "\n",
       "| Index | Subject | Session | FeedbackNo | Prediction |\n",
       "|-------|---------|---------|------------|------------|\n",
@@ -73,33 +73,32 @@
       "\n",
       "Our **hypothesis** was therefore: the amplitudes of the error-related negativity (Neg-ErrP) and positivity (Pos-ErrP) are going to diminish over the course of an experiment.\n",
       "\n",
-      "- based on findings from Perrin et al., we use channel Cz as the channel of interest, and we use windows [325,375] ms (Neg-ErrP) and [455, 505] ms (Pos-ErrP)\n",
       "\n",
       "### Methods\n",
       "\n",
       "In our analysis we focused on a single channel - Cz, which is located on the top of the head. This channel was previously found to exhibit good discrimination between correct and incorrect feedbacks (Perrin et al., 2012).\n",
       "\n",
       "In order to reduce various sources of noise (electrical and biological - e.g. power line noise, muscle noise, skin potentials, ...) we first filtered the signal. We used a digital bandpass IIR Butterworth filter of the 4th order. The half-power (or -3dB) cutoff points were 0.1 Hz and 30 Hz.\n",
-      "![Alt text](files/frequency_response.png)\n",
+      "![Alt text](frequency_response.png)\n",
       "\n",
-      "To test the operation of the filter we generated a signal mimicking an ErrP (a period of a sinusoid). We added white gaussian noise to this signal and an additional 50 Hz sinusoid mimicking the power line noise. All the applications of the filter were zero-phase.\n",
+      "To test the operation of the filter we generated a signal mimicking an ErrP (a period of a sinusoid). We added white gaussian noise to this signal and an additional 50 Hz sinusoid mimicking the power line noise. All the applications of the filter were zero-phased.\n",
       "\n",
       "First we show the clean test signal:\n",
-      "![Alt text](files/test_signal.png)\n",
+      "![Alt text](test_signal.png)\n",
       "\n",
       "Next figure shows the test signal corrupted by noise and the signal after filtering:\n",
-      "![Alt text](files/noisy_signal.png)\n",
+      "![Alt text](noisy_signal.png)\n",
       "\n",
       "The difference between the original signal, and the signal corrupted by noise and then filtered is seen on the next figure:\n",
-      "![Alt text](files/filter_effect.png)\n",
+      "![Alt text](filter_effect.png)\n",
       "\n",
       ">**Trick**: instead of using scipy.signal.lfilter() function to filter, we used scipy.signal.filtfilt(). This function filters the signal twice, once from the left side, and once from the right. This removes the delay that filter would usually introduce into the signal.\n",
       "\n",
       "---\n",
       "\n",
-      "After filtering there are still many artifacts related to eye movements (blinks and eye movements) in the channel of interest. We can see this clearly in the following figure which shows an eye blink appearing both in the EOG and Cz channel:\n",
+      "After filtering there are still many artifacts related to blinks and eye movements in the channel of interest. We can see this clearly in the following figure which shows an eye blink appearing both in the EOG and Cz channel:\n",
       "\n",
-      "![Alt text](files/eye_artifacts.png)\n",
+      "![Alt text](eye_artifacts.png)\n",
       "\n",
       "To remove these artifacts linear regression can be used. We assumed the following linear model:\n",
       "\n",
@@ -138,22 +137,42 @@
       "\n",
       "#### ERP averages\n",
       "\n",
-      "![Alt text](files/grand_average.png)\n",
+      "The following figure shows the average of all the erroneous and correct trials, and their difference. The average has been computed over all the sessions and subjects.\n",
+      "\n",
+      "![Alt text](grand_average.png)\n",
+      "\n",
+      "Both effects - error-related negativity and positivity - can clearly be seen in the averages, especially in the difference wave. The magenta and cyan lines outline the intervals of interest for the Neg-ErrP and Pos-ErrP, respectively.\n",
       "\n",
       "####\u00a0Effect of time on ErrP amplitudes\n",
       "\n",
-      "![Blabla](files/neg_errp_regression.png)\n",
+      "After selecting the intervals of interest, we calculated the mean amplitude within these intervals for each trial. In the following figure we show the amplitude of Neg-ErrP over the course of the experiment, aggregated for all the subjects.\n",
       "\n",
-      "![Alt text](files/pos_errp_regression.png)\n",
+      "![Blabla](neg_errp_regression.png)\n",
+      "\n",
+      "As can be seen from the distribution of amplitudes, and from the fitted regression line, there is no significant relation between the elapsed time and the Neg-ErrP amplitude.\n",
+      "\n",
+      "For the Pos-ErrP our results suggest a very weak relation ($r = -0.05$) that was not statistically significant. This can be seen in the following figure.\n",
+      "\n",
+      "![Alt text](pos_errp_regression.png)\n",
       "\n",
       "\n",
       "\n",
       "### Future work\n",
       "\n",
-      "The obtained results showed no correlations between the time and the amplitude of error potentials. We consider that further investigation on a larger spatial space could indicate more reliable relation between the two characteristics of the potentials. More specifically, by analyzing only one channel could have had a limitative effect over our findings. Furthermore, we believe that a longer recording session would be more appropriate for the assessment of this time-amplitude correlation.\n",
+      "On one hand, we found no correlations between the time and the amplitude of error potentials (Neg-ErrP). On the other hand, we observed an increased number of erroneous feedbacks with time, which could be a result of changes in the P300 wave. We also found that the amplitude of the potentials elicited by the  positive feedback (Pos-ErrP) showed a slight decreasing trend over time, which could be explained by fatigue and loss of focus on the task with time.  \n",
+      "\n",
+      "It is known that BCIs are prone to errors in the recognition of subject's intent to perform a specific task. We consider that further investigation of the spatio-temporal evolution of ERPs over time could give interesting insights. More specifically,  analyzing only one channel could have had a restrictive effect on our findings. Furthermore, we believe that a longer recording session would be more appropriate for the assessment of this time-amplitude correlation. \n",
+      "In addition, it would be interesting to explore this correlation over multiple sessions recorded in different days. According to this protocol, we could disentangle the effects of fatigue (due to a longer experimental session) from the ones of task-related training (due to multiple training sessions). \n",
+      "\n",
+      "Another limitation of our analysis was aggregating all the subject's data together. This might have hidden some subject-specific patterns. Attention and fatigue have opposite effects from training, so this might have cancelled out over different subjects, or even within subjects.\n",
+      "\n",
+      "We intend to continue working on this dataset and use our results to participate in the Kaggle challenge of designing a BCI for detecting errors which would be subject independent and robust to changes in EEG properties over time.  \n",
       "\n",
       "### References\n",
-      "\n"
+      "\n",
+      "Chavarriaga, Ricardo, Aleksander Sobolewski, and Jos\u00e9 del R. Mill\u00e1n. \"Errare machinale est: the use of error-related potentials in brain-machine interfaces.\" Frontiers in neuroscience 8 (2014).\n",
+      "\n",
+      "Margaux, Perrin, et al. \"Objective and subjective evaluation of online error correction during P300-based spelling.\" Advances in Human-Computer Interaction 2012 (2012)."
      ]
     }
    ],
